Issue #14: Fix button spacing in call to action

--- a/themes/atletico/sass/components/_call-to-action.scss
+++ b/themes/atletico/sass/components/_call-to-action.scss
@@ -61,7 +61,9 @@
         }
 
         &.call-to-action__button--left {
-          margin-right: .5em;
+          @include media(em(400)) {
+            margin-right: .5em;
+          }
         }
       }
     }
